--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,13 @@ language: python
 python:
   - 2.6
   - 2.7
-  - 3.3
-  - 3.4
-  - 3.5
 
 # whitelist
 branches:
   only:
     - pr/3
+    - devTE
+    - Torrent-Edition
     
 before_script: cd ./tests
 script: ./all_tests.py
